--- a/registration/templates/registration/sign_up.html
+++ b/registration/templates/registration/sign_up.html
@@ -9,8 +9,12 @@
             {{ form.as_p }}
 
             <p>
-                <input type="submit" class="btn btn-success" value="Crear">
+                <input type="submit" class="btn btn-success" name="account_type" value="Registrarse como cliente">
+
+                <input type="submit" class="btn btn-success" name="account_type" value="Registrar como club">
             </p>
+
+
         </form>
     </div>
 {% endblock %}
