--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -30,14 +30,20 @@
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'clubes' %}"> Clubes </a>
+            <a class="nav-link" href="{% url 'all' %}"> Clubes </a>
           </li>
 
           {% if request.user.is_authenticated %}
 
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="{% url 'profile' %}"> Perfil </a>
-            </li> 
+            {% if request.user.role == 'tenant' %}
+                <li class="nav-item">
+                  <a class="nav-link" aria-current="page" href="{% url 'club_settings' %}"> Mi club </a>
+                </li> 
+            {% endif %}
+
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="{% url 'profile' %}"> Perfil </a>
+              </li> 
 
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="{% url 'logout' %}"> Cerrar sesion </a>
@@ -53,11 +59,6 @@
             </li>
 
           {% endif %}
-
-          
-
-          
-
 
         </ul>
 
