club info updatable and field creation also is working

--- a/canchas/templates/canchas/fields_list.html
+++ b/canchas/templates/canchas/fields_list.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     {% block content %}
-        HTML para ver canchas
+        HTML para ver canchas (PUBLIC)
     {% endblock %}
 </body>
 </html>
