--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -50,7 +50,7 @@
             {% endif %}
 
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="{% url 'profile' %}"> Perfil </a>
+                <a class="nav-link" aria-current="page" href="{% url 'profile' %}">Mi Perfil </a>
               </li> 
 
             <li class="nav-item">
