--- a/clubes/templates/clubes/club_settings.html
+++ b/clubes/templates/clubes/club_settings.html
@@ -7,21 +7,13 @@
         {% csrf_token %}
         {{ form.as_p}}
 
-        
         <input type="submit" value="Update" />
     </form>
 
-    <h1>Tus canchas</h1>
 
-        {% comment %} SHOW FIELDS {% endcomment %}
+    {% comment %} Quiza poner esto, decision por tomar al editar estilo {% endcomment %}
+    {% comment %} <h1>Tus canchas</h1>
 
-    {% for field in fields %}
-
-        <p>Nombre: {{ field.name }}</p>
-        <p>Precio: ${{ field.price }}</p>
-
-    {% endfor %}
-
-    <a href="{% url 'create_field' %}"> Agregar cancha </a>
+    <a href="{% url 'create_field' %}"> Agregar cancha </a> {% endcomment %}
 
 {% endblock %}
