Starting reservation, some Date validations

--- a/clubes/templates/clubes/club_clientDetailView.html
+++ b/clubes/templates/clubes/club_clientDetailView.html
@@ -39,6 +39,7 @@
                             </p>
                             <a href="{% url 'reservation' field.id %}"> Reservar </a>
                         </div>
+                        <p>Falta poner la foto</p>
                     </div>
                     {% endif %}
                     
