from macos, smtp service for getting forgotten password working

--- a/registration/templates/registration/sign_up.html
+++ b/registration/templates/registration/sign_up.html
@@ -9,9 +9,7 @@
             {{ form.as_p }}
 
             <p>
-                <input type="submit" class="btn btn-success" name="account_type" value="Registrarse como cliente">
-
-                <input type="submit" class="btn btn-success" name="account_type" value="Registrar como club">
+                <input type="submit" class="btn btn-success" name="account_type" value="Registrarse">
             </p>
 
 
