--- a/registration/templates/registration/login.html
+++ b/registration/templates/registration/login.html
@@ -20,22 +20,8 @@
                 <button type="submit" class="btn btn-dark">Iniciar sesion</button>
             </div>
         </div>
-
-        {% if form.errors %}
-            <div class="alert alert-danger">
-                <ul>
-                    {% for field in form %}
-                        {% for error in field.errors %}
-                            <li>{{ error }}</li>
-                        {% endfor %}
-                    {% endfor %}
-
-                    {% for error in form.non_field_errors %}
-                        <li>{{ error }}</li>
-                    {% endfor %}
-                </ul>
-            </div>
-        {% endif %}
+        <div class="container">
+            <a href="{% url 'password_recovery' %}">Olvide mi contrasena</a>
         </div>
     </form>
 </div>
