--- a/reservation/templates/reservation/reservation_menu.html
+++ b/reservation/templates/reservation/reservation_menu.html
@@ -6,25 +6,27 @@
     <p>Cancha de 5,      $15.000,     Cancha de pasto sintetico</p>
 
     <h4>Escoger fecha</h4>
-    <form method="post">
+    <form method="post" action="{% url 'index' field.id %}">
         {% csrf_token %}
         <label for="date">Fecha:</label>
-        <input type="date" name="date" value="{{ selected_date|date:"Y-m-d" }}">
+        <input type="date" id="datePicker" name="date" value="{{ selected_date|date:"Y-m-d" }}">
         <input type="hidden" name="field_id" value="{{ field.id }}">
         <input type="submit" value="Seleccionar fecha">
     </form>
 
     {% for time in available_times %}
         <div class='card'>
-            <p>{{ time|time:"H:i" }}</p>
-            <form method="post" action="{% url 'payment' %}">
+            <p>{{ time }}</p>
+            <form method="post" action="{% url 'index' field.id %}">
                 {% csrf_token %}
                 <input type="hidden" name="date" value="{{ selected_date|date:"Y-m-d" }}">
-                <input type="hidden" name="time" value="{{ time|time:"H:i" }}">
+                <input type="hidden" name="time" value="{{ time }}">
                 <input type="hidden" name="field_id" value="{{ field.id }}">
                 <input type="submit" value="Reservar horario">
             </form>
         </div>
-    {% endfor %}
+    {% endfor %} 
+
 
 {% endblock %}
+
