--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -34,7 +34,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="#"> Ayuda </a>
+            <a class="nav-link" aria-current="page" href="{% url 'help' %}"> Ayuda </a>
           </li>
 
           {% if request.user.is_authenticated %}
@@ -49,7 +49,7 @@
                 </li> 
             {% else %}
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#"> Mis reservas </a>
+                <a class="nav-link" aria-current="page" href="{% url 'user_reserves' pk=user.id %}"> Mis reservas </a>
               </li> 
             {% endif %}
 
