--- a/registration/templates/registration/profile.html
+++ b/registration/templates/registration/profile.html
@@ -6,12 +6,22 @@
     <div class="me-4 col-md-8 pe-2">
         <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
-
-            <p>Role: {{ request.user.role }}</p>
-
-            {{ form.as_p }}
             
+            {{ form.as_p }}
+
+            <a href="{% url 'change_password' %}">Cambiar contrasena</a>
+
             <button type="submit" class="btn btn-primary">Guardar</button>
+
+            {% if request.user.role == 'client' %}
+                <p>Cuenta personal</p>
+            {% elif request.user.role == 'tenant' %}
+                <p>Cuenta de empresa</p>
+            {% else %}
+                <p>Cuenta admin</p>
+            {% endif %}
+
+
 
         </form>
 
