--- a/registration/templates/registration/password_recovery.html
+++ b/registration/templates/registration/password_recovery.html
@@ -4,6 +4,13 @@
 
     <h1>Recuperar contraseña view</h1>
 
+    {% for message in messages %}
+        <div class="alert alert-{{ message.tags }}">
+            {{ message }}
+        </div>
+    {% endfor %}
+
+
     <form method="POST" >
         {% csrf_token %}
 
