--- a/core/templates/core/help.html
+++ b/core/templates/core/help.html
@@ -1,12 +1,33 @@
 {% extends 'core/base.html' %}
 
 {% block content %}
+  {% for faq in faqs %}
 
-<div class="container">
-    <div class="row">
-        <div class="col-md-12">
-            <h1>Ayuda</h1>
+  <div class="accordion accordion-flush" id="accordionFlushExample">
+    <div class="accordion-item">
+      <h2 class="accordion-header">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse{{ forloop.counter }}" aria-expanded="false" aria-controls="flush-collapse{{ forloop.counter }}">
+          {{ faq.title }}
+        </button>
+      </h2>
+      <div id="flush-collapse{{ forloop.counter }}" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+        <div class="accordion-body">
+          {{ faq.answer }}
         </div>
+      </div>
     </div>
+  </div>
+  {% endfor %} 
+
+
+  <form method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+
+    <button type="submit">Enviar</button>
+
+  </form>
+
+  {% comment %} Quiero {% endcomment %}
 
 {% endblock %}
