--- a/registration/templates/registration/user_reserves.html
+++ b/registration/templates/registration/user_reserves.html
@@ -5,7 +5,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h1>mis reservas</h1>
+                <h1>Mis reservas</h1>
                 {% for reservation in reservation_history %}
                     <div>
                         {% if reservation.status == 'cancelled' %}
@@ -17,14 +17,17 @@
                         <p>Fecha: {{ reservation.dateToReservate }}</p>
                         <p>Campo: {{ reservation.field.name }}</p>
                         <p>Estado: {{ reservation.status }}</p>
-                        <form method="post" action="{% url 'edit_reservation' reservation.id %}">
-                            {% csrf_token %}
-                            <button type="submit">Cambiar fecha y/o hora</button>
-                        </form>
-                        <form method="post" action="{% url 'cancel_reservation' reservation.id %}">
-                            {% csrf_token %}
-                            <button type="submit">Cancelar reserva</button>
-                        </form>
+                        {% if reservation.status != 'cancelled' %}
+                            <form method="post" action="{% url 'edit_reservation' reservation.id %}">
+                                {% csrf_token %}
+                                <button type="submit">Cambiar fecha y/o hora</button>
+                            </form>
+                            <form method="post" action="{% url 'cancel_reservation' reservation.id %}">
+                                {% csrf_token %}
+                                <button type="submit">Cancelar reserva</button>
+                            </form>
+                        {% endif %}
+
                     </div>
                 {% empty %}
                     <p>No has realizado ninguna reserva.</p>
