Adding UI and fixing minors errors

--- a/canchas/templates/canchas/create_field.html
+++ b/canchas/templates/canchas/create_field.html
@@ -2,13 +2,17 @@
 
 {% block content %}
 
-    <h1>Create Field</h1>
-    <form method="post" enctype="multipart/form-data">
-        {% csrf_token %}
-        {{ form.as_p }}
+    <div class='container-sm'>
+        <h1 class="display-4" style="margin-top: 30px; margin-bottom: 30px;">Crea una nueva cancha</h1>
+        <form method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+            {{ form.as_p }}
 
-        <a href="{% url 'club_settings' %}">Back to list</a>
-        <button type='submit'> Crear </button>
-    </form>
+            <a href="{% url 'club_settings' %}">Back to list</a>
+            <button type='submit'> Crear </button>
+        </form>
+    </div>
 
+
+    {% include 'core/footer.html' %}
 {% endblock %}
