--- a/registration/templates/registration/password_recovery.html
+++ b/registration/templates/registration/password_recovery.html
@@ -2,7 +2,8 @@
 
 {% block content %}
 
-    <h1>Recuperar contraseña view</h1>
+    <div class="container-md">
+        <h1>Recuperar contraseña view</h1>
 
     {% for message in messages %}
         <div class="alert alert-{{ message.tags }}">
@@ -14,10 +15,16 @@
     <form method="POST" >
         {% csrf_token %}
 
-        {{ form.as_p }}
+        {% for field in form %}
+            <div class="form-group">
+                <label for="{{ field.id_for_label }}">{{ field.label }}</label>
+                <input type="{{ field.field.widget.input_type }}" class="form-control" id="{{ field.id_for_label }}" name="{{ field.html_name }}" {% if field.field.required %}required{% endif %}>
+            </div>
+        {% endfor %}
 
-        <button type="submit">Enviar</button>
+        <button type="submit" class="btn btn-primary">Enviar</button>
 
     </form>
+    </div>
 
 {% endblock %}
