--- a/canchas/templates/canchas/userFields_list.html
+++ b/canchas/templates/canchas/userFields_list.html
@@ -1,52 +1,67 @@
 {% extends 'core/base.html' %}
 
-<body>
-    {% block content %}
-        <div style="padding-bottom: 10px;">
-            <a href="{% url 'create_field' %}"> 
-                <button type="button" class="btn btn-primary">Agregar cancha</button>
+{% block content %}
+    <div class='container-md'>
+        <div style="display: flex; justify-content: space-between; align-items: center; padding-bottom: 10px; margin-bottom: 30px;">
+
+            <h1 class="display-4" style="margin-top: 30px;">Tus canchas</h1>
+    
+    
+            <a href="{% url 'create_field' %}" style="align-self: center;"> 
+                <button type="button" class="btn btn-primary" style="margin-top: 30px;">Agregar cancha</button>
             </a>
         </div>
-
+    
         <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
-
+    
             {% for field in fields|slice:"0::-1" %}
-                <div class=''>
+                <div class='container'>
+                    <div class="card mb-4 shadow-sm">
+                        <div class="card-body d-flex flex-column flex-md-row justify-content-between">
+                            <div style="text-align: left;">
+                                <h5 class="card-title">Nombre: {{ field.name }}</h5>
+                                <h6 class="card-subtitle mb-2 text-body-secondary">Precio: ${{ field.price }}</h6>
 
-                    <div class="card" style="width: 80rem;">
-                        <div class="card-body d-flex justify-content-between">
-                            <div>
-                                <h5 class="card-title">{{ field.name }}</h5>
-                                <h6 class="card-subtitle mb-2 text-body-secondary">{{ field.price }}</h6>
-                                <p class="card-text">
-                                <p> {{ field.groundType }}</p>
-                        
+                                <p>Descripcion: {{ field.description }}</p>
+
+                                <p>Tipo de suelo: {{ field.groundType }}</p>
+                            
                                 {% if field.isActive == True %}
-                                    <p>Cancha activa</p>
+                                    <p>Estado: <span style="color: green;">Cancha activa</span></p>
                                 {% else %}
-                                    <p>Cancha Inactiva</p>
-                                {% endif %} 
-                                        
-                                    <p>Jugadores por lado: {{ field.playersPerSide }} </p>   
-                                </p>
-                                <a href="{% url 'cancha_update' pk=field.id %}" class="card-link">Modificar</a>
+                                    <p>Estado: <span style="color: red;">Cancha inactiva</span></p>
+                                {% endif %}
+                            
+                                <p>Jugadores por lado: {{ field.playersPerSide }} </p>   
+                                <a href="{% url 'cancha_update' pk=field.id %}" class="card-link d-md-inline d-flex justify-content-center">
+                                    <button type="button" class="btn btn-primary" style="margin-top: 10px;">Modificar</button>
+                                </a>
                             </div>
                         
                             {% if field.fieldPhoto %}
-                                <img src="{{ field.fieldPhoto.url }}" width="300" height="300">
+                                <img src="{{ field.fieldPhoto.url }}" class="img-fluid rounded" style="max-width: 300px; max-height: 300px;">
                             {% else %}
                                 {% load static %}
-                                <img src="{% static 'core/img/noPhoto.jpg' %}" width="300" height="300">
+                                <img src="{% static 'core/img/noPhoto.jpg' %}" class="img-fluid rounded" style="max-width: 300px; max-height: 300px;">
                             {% endif %}
                         </div>
                     </div>
-
                 </div>
-                <br>
+          
+
+            {% empty %}
+
+
+            <div style="display: flex; justify-content: center; align-items: center; height: 40vh;">
+                <p>No hay canchas creadas. <a href="{% url 'create_field' %}">Crea una aqui.</a> </p>
+            </div>
+
+
+
             {% endfor %}
         </form>
-    {% endblock %}
+    </div>
 
-</body>
-</html>
+    {% include 'core/footer.html' %}
+{% endblock %}
