--- a/clubes/templates/clubes/club_settings.html
+++ b/clubes/templates/clubes/club_settings.html
@@ -1,19 +1,20 @@
 {% extends 'core/base.html' %}
 
 {% block content %}
-    <h1>Update Club</h1>
+    <div class='container-sm'>
+        <h1 class="display-4" style='margin-top: 20px; margin-bottom: 20px;'>Modifica tu club</h1>
 
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p}}
 
-        <input type="submit" value="Update" />
+        <input type="submit" class="btn btn-success btn-lg" style="margin-top: 30px;" value="Guardar" />
     </form>
+    </div>
 
 
-    {% comment %} Quiza poner esto, decision por tomar al editar estilo {% endcomment %}
-    {% comment %} <h1>Tus canchas</h1>
 
-    <a href="{% url 'create_field' %}"> Agregar cancha </a> {% endcomment %}
+
+{% include 'core/footer.html' %}
 
 {% endblock %}
