--- a/core/static/core/css/style.css
+++ b/core/static/core/css/style.css
@@ -4,8 +4,64 @@
     margin-left: 25px;
 }
 
-body{
-    background: #afaeae;
+.navbar {
+    background-color: #163E56;
+    padding: 0;
+}
+
+.navbarFonts {
+    color: white;
+    font-size: 20px;
+    margin-right: 20px; 
+}
+
+.nav-item .nav-link {
+    white-space: nowrap;
+}
+
+body {
+    background: #DFF6FF;
+    margin: 0;
+}
+
+.container {
+    padding: 0;
+}
+
+.home-title {
+    color: #163E56;
+    background-color: #D9D9D9;
+    padding: 10px;
+    border-radius: 10px;
+    text-align: center;
+    max-width: fit-content;
+
+    /* Agregado para centrar el elemento */
+    display: flex;
+    justify-content: center;
+    align-items: center;; /* Ajusta esto según tus necesidades */
+    margin: auto;
+}
+
+.home-title2 {
+    color: #163E56;
+    background-color: #D9D9D9;
+    padding: 10px;
+    border-radius: 10px;
+    margin-top: 50px;
+    text-align: center;
+    display: inline-block;
+}
+
+
+.home-reference {
+    color: #DFF6FF;
+    background-color: #256D85;
+    margin-top: 400px;
+    padding: 10px;
+    padding: 10;
+    border-radius: 10px;
+    display: inline-block;
 }
 
 .clubPhoto{
@@ -35,4 +91,27 @@ body{
     border: none;
     font-size: 16px;
     color: #333;
+}
+
+
+.card-body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.card-text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.btn-block {
+    width: 100%;
+}
+
+footer {
+    max-width: 100%;
+    /* Otras reglas CSS para el footer */
 }
