--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -5,77 +5,75 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-
+    {% comment %} <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"> {% endcomment %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    
+    {% comment %} Jquery {% endcomment %}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.payment/3.0.0/jquery.payment.min.js"></script>
     {% load static %}
     <link rel="stylesheet" href="{% static 'core/css/style.css' %}">
     <title> Practice </title>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <nav class="navbar navbar-expand-lg" style="background-color: #163E56;">
     <div class="container-fluid">
-
-      <div class="container">
         <a class="navbar-brand" href="{% url 'home' %}">
-          <img src="{% static 'core/img/ballLogo.png' %}" alt="iPartidos Logo" class="logo-img">
-          <h3> iPartidos </h3>
+          <img src="{% static 'core/img/soccer_ball2.svg' %}" alt="iPartidos Logo" class="logo-img">
+          <h3 style="color: white;"> iPartidos </h3>
         </a>
-
-        
-        
-      </div>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
+    </div>
+
+
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'all' %}"> Clubes </a>
+            <a class="nav-link navbarFonts" href="{% url 'all' %}"> Clubes </a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="{% url 'help' %}"> Ayuda </a>
+            <a class="nav-link navbarFonts" aria-current="page" href="{% url 'help' %}"> Ayuda </a>
           </li>
 
           {% if request.user.is_authenticated %}
 
             {% if request.user.role == 'tenant' %}
                 <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="{% url 'club_settings' %}"> Mi club </a>
+                  <a class="nav-link navbarFonts" aria-current="page" href="{% url 'club_settings' %}"> Mi club </a>
                 </li> 
 
                 <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="{% url 'canchas_list' %}"> Mis canchas </a>
+                  <a class="nav-link navbarFonts" aria-current="page" href="{% url 'canchas_list' %}"> Mis canchas </a>
                 </li> 
             {% else %}
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="{% url 'user_reserves' pk=user.id %}"> Mis reservas </a>
+                <a class="nav-link navbarFonts" aria-current="page" href="{% url 'user_reserves' pk=user.id %}"> Mis reservas </a>
               </li> 
             {% endif %}
 
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="{% url 'profile' %}">Mi Perfil </a>
+                <a class="nav-link navbarFonts" aria-current="page" href="{% url 'profile' %}">Mi Perfil </a>
               </li> 
 
             <li class="nav-item">
               <form method="post" action="{% url 'logout' %}">
                 {% csrf_token %}
-                <input type="submit" value="Logout">
+                <button type="submit" class="btn btn-danger navbarFonts"> Logout </button>
               </form>
             </li>
 
           {% else %}
 
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="{% url 'login' %}"> Inicia sesion </a>
+              <a class="nav-link navbarFonts" aria-current="page" href="{% url 'login' %}"> Inicia sesion </a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'signup' %}"> Registrate </a>
+              <a class="nav-link navbarFonts" href="{% url 'signup' %}"> Registrate </a>
             </li>
 
           {% endif %}
@@ -86,10 +84,10 @@
     </div>
   </nav>
 
-    <div class="container">
+    <div>
         
         <!--Cargando contenido dinamico-->
         {% block content %}{% endblock %}
-      </div>
+    </div>
 </body> 
 </html>
