--- a/registration/templates/registration/login.html
+++ b/registration/templates/registration/login.html
@@ -2,27 +2,40 @@
 {% load static %} 
 
 {% block content %}
-<h2 class="text-center">Inicia sesion</h2>
+
 <div class="col-md-6 mx-auto">
     <form method="post">
         {% csrf_token %}
-        <div class='container'>
+        <div class='container-md'>
+
+            <h2 style="margin-top: 30px; margin-bottom: 30px;" class="display-4">Inicia sesion</h2>
             <p>
-                <label for="id_username">Email</label>
+                <label for="id_username">Correo electronico</label>
                 <input type="email" name="username" id="username" class="form-control" required>
             </p>
             <p>
-                <label>Password</label>
+                <label>Contraseña</label>
                 <input type="password" name="password" class="form-control" required>
             </p>
     
-            <div class="is-grouped">
-                <button type="submit" class="btn btn-dark">Iniciar sesion</button>
+            <div class="container d-flex justify-content-center mt-3">
+                <button type="submit" class="btn btn-primary">Iniciar sesion</button>
             </div>
-        </div>
-        <div class="container">
-            <a href="{% url 'password_recovery' %}">Olvide mi contrasena</a>
-        </div>
+            <div class="container d-flex justify-content-center mt-3">
+                <a href="{% url 'password_recovery' %}" class="btn btn-secondary">
+                    Olvide mi contraseña
+                </a>
+            </div>
+            
+            <div class="container d-flex justify-content-center mt-3">
+                <p>Nuevo aqui? <a href="{% url 'signup' %}"> Crear cuenta</a></p>
+            </div>
+
+        </div> <!-- Este es el div que faltaba cerrar -->
+
     </form>
 </div>
+
+{% include 'core/footer.html' %}
+    
 {% endblock %}
